初步完成图形化界面